--- a/frontend-1/src/pages/auth/login.css
+++ b/frontend-1/src/pages/auth/login.css
@@ -1,4 +1,4 @@
-.login {
+.login-div {
     display: flex;
     flex-direction: column; /* This is the key property */
     position: relative;
@@ -33,7 +33,7 @@
     margin-top: 20px; /* Adjust the value as needed */
 }
 
-body {
+.login-div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,10 +42,11 @@ body {
     overflow: hidden;
 }
 
-h1 {
+.login-h1 {
+    top: -50px;
     position: relative;
     font-family: 'Montserrat', Arial, sans-serif;
-    font-size: calc(20px + 5vw);
+    font-size: calc(15px + 5vw);
     font-weight: 1000;
     color: #fff;
     letter-spacing: 0.02em;
@@ -57,7 +58,7 @@ h1 {
     animation: shake 2.5s linear forwards;
 }
 
-h1 span {
+.login-h1 span {
     position: absolute;
     top: 0;
     left: 0;
@@ -66,21 +67,21 @@ h1 span {
             clip-path: polygon(10% 0%, 44% 0%, 70% 100%, 55% 100%);
 }
 
-h1::before,
-h1::after {
+.login-h1::before,
+.login-h1::after {
     content: attr(data-text);
     position: absolute;
     top: 0;
     left: 0;
 }
 
-h1::before {
+.login-h1::before {
     animation: crack1 2.5s linear forwards;
     -webkit-clip-path: polygon(0% 0%, 10% 0%, 55% 100%, 0% 100%);
             clip-path: polygon(0% 0%, 10% 0%, 55% 100%, 0% 100%);
 }
 
-h1::after {
+.login-h1::after {
     animation: crack2 2.5s linear forwards;
     -webkit-clip-path: polygon(44% 0%, 100% 0%, 100% 100%, 70% 100%);
             clip-path: polygon(44% 0%, 100% 0%, 100% 100%, 70% 100%);
