--- a/frontend-1/src/index.css
+++ b/frontend-1/src/index.css
@@ -5,9 +5,8 @@
 
 .dropdown-menu {
     position: absolute;
-    background-color: white;
+    background-color: #99d5f5bb;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     border-radius: 4px;
 }
@@ -15,6 +14,9 @@
 .dropdown-menu a {
     padding: 5px;
     margin: 10px;
-    background-color: #99d5f5;
     border-radius: 4px;
+}
+
+.dropdown-menu a:hover {
+    background-color: #eceff1b4;
 }
