--- a/frontend-1/src/pages/favorites/index.css
+++ b/frontend-1/src/pages/favorites/index.css
@@ -7,7 +7,7 @@ body {
     position: inline;
     display: block;
     text-align: center;
-    padding-top: 10%;
+    padding-top: 20px;
     margin: 20px;
     color: #ad3ec9ab;
 }
